# NeMo-Relay

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ATTRIBUTIONS-Node.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  codecov.yml  deny.toml  install.ps1  install.sh  justfile  opencode-nemoflow-integration-plan.md  package-lock.json  package.json  pyproject.toml  sonar-project.properties
crates/adaptive/: Cargo.toml  README.md
crates/adaptive-topology/: Cargo.toml  README.md
crates/adaptive-topology/src/: convergence.rs  drift.rs  geometry.rs  governor.rs  lib.rs  manifold.rs  topology.rs
crates/adaptive/benches/: convergence_bench.rs
crates/adaptive/src/: acg_component.rs  acg_learner.rs  acg_profile.rs  adaptive_hints_intercept.rs  agent_context_intercept.rs  config.rs  context_helpers.rs  drain.rs  error.rs  intercepts.rs  learner.rs  lib.rs  plugin_component.rs  redis.rs  runtime.rs  storage.rs  subscriber.rs  tool_parallelism_learner.rs  topology.rs  types.rs
crates/adaptive/tests/: redis_tests.rs  runtime_integration_tests.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: api.rs  atif.rs  bindings.rs  codec.rs  config_editor.rs  context.rs  error.rs  inspection.rs  json.rs  lib.rs  plugin.rs  registry.rs  shared_runtime.rs  stream.rs  types.rs
crates/core/tests/: codec_tests.rs  context_isolation_tests.rs  middleware_tests.rs  pipeline_tests.rs  scope_local_tests.rs  stream_tests.rs
crates/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  nat_nexus.h  nemo_flow.h  nemo_relay.h  nvagentrt.h  nvmagic.h
crates/ffi/src/: api.rs  callable.rs  convert.rs  error.rs  lib.rs  types.rs
crates/node/: Cargo.toml  README.md  adaptive.d.ts  adaptive.js  build.rs  observability.d.ts  observability.js  optimizer.d.ts  optimizer.js  package-lock.json  package.json  plugin.d.ts  plugin.js  typed.d.ts  typed.js
crates/node/src/: api.rs  api_coverage_tests.rs  callable.rs  callable_coverage_tests.rs  callback_factory.rs  convert.rs  convert_coverage_tests.rs  lib.rs  promise_call.rs  promise_call_coverage_tests.rs  stream.rs  stream_coverage_tests.rs  types.rs  types_coverage_tests.rs
crates/node/tests/: adaptive_tests.mjs  atif_tests.mjs  callback_error_tests.mjs  codec_tests.mjs  context_tests.mjs  deregister_tests.mjs  dynamic_plugin_tests.mjs  event_sanitizers_tests.mjs  index_loader_tests.mjs  llm_tests.mjs  node_tests.mjs  observability_plugin_tests.mjs  openinference_tests.mjs  optimizer_tests.mjs  otel_tests.mjs  pii_redaction_tests.mjs  plugin_tests.mjs  scope_local_tests.mjs  scope_tests.mjs  tools_tests.mjs  typed_tests.mjs  types_tests.mjs
crates/otel/: Cargo.toml  README.md
crates/otel/src/: lib.rs
crates/python/: Cargo.toml  README.md
crates/python/embedded_python/: _guardrails_local.py
crates/python/src/: convert.rs  coverage_tests.rs  lib.rs  py_adaptive.rs  py_adaptive_topology.rs  py_api.rs  py_callable.rs  py_context.rs  py_optimizer.rs  py_plugin.rs  py_proxy.rs  py_proxy_coverage_tests.rs  py_storage.rs  py_storage_coverage_tests.rs  (+3 more)
crates/wasm/: Cargo.toml  README.md  adaptive.d.ts  adaptive.js  optimizer.d.ts  optimizer.js  plugin.d.ts  plugin.js  typed.d.ts  typed.js
examples/: README.md  agent_with_logging.py  pyproject.toml  trajectory.json
examples/nemoguardrails/: README.md
examples/node/: basic.cjs
examples/python/: atif_export.py  basic_scope_and_tool.py
examples/python-grpc-worker-plugin/: .gitignore  README.md  pyproject.toml  relay-plugin.toml  worker.py
examples/rust-native-plugin/: README.md  relay-plugin.toml
examples/switchyard/: README.md  e2e-common.sh  fake_upstream.py  hermes-ollama-plugins.toml  hermes-ollama-profiles.yaml  inferencehub-stage-router-plugins.toml.in  inferencehub-stage-router-profiles.yaml  otel-collector.yaml  plugins.toml  real-e2e-plugins.toml  real-e2e-profiles.yaml  run-hermes-ollama-smoke.sh  run-inferencehub-stage-router-smoke.sh  run-real-e2e.sh
examples/wasm/: basic.cjs
integrations/langchain/: README.md  hatch_fecth_version.py  pyproject.toml
python/: pyproject.toml
python/nat_nexus/: README.md  __init__.py  __init__.pyi  codecs.py  codecs.pyi  guardrails.py  intercepts.py  llm.py  optimizer.py  optimizer.pyi  proxy.py  proxy.pyi  scope.py  scope_local.py  subscribers.py  tools.py  typed.py
python/nemo_flow/: README.md  __init__.py  __init__.pyi  adaptive.py  adaptive.pyi  codecs.py  guardrails.py  intercepts.py  llm.py  optimizer.py  optimizer.pyi  plugin.py  plugin.pyi  scope.py  scope_local.py  subscribers.py  telemetry_v1.py  telemetry_v1.pyi  tools.py  typed.py  utils.py
python/nemo_relay/: README.md  __init__.py  __init__.pyi  _config_normalize.py  _guardrails_local.py  _native.pyi  adaptive.py  adaptive.pyi  adaptive_topology.py  adaptive_topology.pyi  guardrails.py  intercepts.py  llm.py  nat_exporter.py  observability.py  observability.pyi  pii_redaction.py  pii_redaction.pyi  plugin.py  plugin.pyi  pricing.py  scope.py  scope_local.py  subscribers.py
python/nvagentrt/: __init__.py  __init__.pyi  guardrails.py  intercepts.py  llm.py  scope.py  subscribers.py  tools.py  typed.py
python/nvmagic/: __init__.py  __init__.pyi  guardrails.py  intercepts.py  llm.py  scope.py  subscribers.py  tools.py  typed.py
python/plugin/: .gitignore  README.md  build_backend.py  pyproject.toml
python/tests/: conftest.py  test_adaptive.py  test_adaptive_config.py  test_adaptive_topology.py  test_builtin_codecs.py  test_codecs.py  test_context_isolation.py  test_declarative_proxy.py  test_dynamic_plugin_host.py  test_event_json.py  test_event_sanitizers.py  test_integration_codecs.py  test_llm.py  test_nat_exporter.py  test_nvagentrt.py  test_observability_plugin.py  test_optimizer.py  test_optimizer_config.py  test_pii_redaction_plugin.py  test_plugin_config.py  test_proxy.py  test_scope.py  test_scope_local.py  test_subscribers.py  test_telemetry_v1.py  test_tools.py  test_typed.py  test_typed_codec_name.py  test_types.py  test_utils.py
(+3837 files in other folders)
