# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nvidia-nat-nexus"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
python-source = "python"
module-name = "nat_nexus._native"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "ipython~=8.20",
    "maturin>=1.0,<2.0",
    "pre-commit~=4.0",
    "ruff~=0.11",
    "ty>=0.0.1a7",
    "uv~=0.10.0",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.26",
    "pytest-cov~=7.0",
]

[tool.uv]
default-groups = ["dev", "test"]
package = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ty.analysis]
# nat_nexus._native is a compiled Rust extension (built by maturin) that only
# exists after `uv sync` / `pip install -e .`. Suppress unresolved-import for it.
allowed-unresolved-imports = ["nat_nexus._native", "pytest"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
