# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "nemo-flow-examples"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-nvidia-ai-endpoints>=0.3",
    "nemo-flow>=0.1.0",
]

[tool.uv.sources]
nemo-flow = { path = "..", editable = true }
langchain = { path = "../third_party/langchain/libs/langchain_v1", editable = true }
langchain-core = { path = "../third_party/langchain/libs/core", editable = true }
langchain-nvidia-ai-endpoints = { path = "../third_party/langchain-nvidia/libs/ai-endpoints", editable = true }
