# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nemo-flow"
dynamic = ["version"]
description = "Python bindings for the NeMo Flow agent runtime."
readme = "nemo_flow/README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA Corporation & Affiliates" },
]
keywords = [
    "agents",
    "ai",
    "llm",
    "middleware",
    "nemo-flow",
    "observability",
    "runtime",
    "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]

[project.urls]
Documentation = "https://nvidia.github.io/NeMo-Flow/"
Homepage = "https://github.com/NVIDIA/NeMo-Flow"
Issues = "https://github.com/NVIDIA/NeMo-Flow/issues"
Repository = "https://github.com/NVIDIA/NeMo-Flow"

[tool.maturin]
manifest-path = "../crates/python/Cargo.toml"
python-source = "."
module-name = "nemo_flow._native"
features = ["pyo3/extension-module"]

[tool.maturin.sbom]
rust = true
auditwheel = true
