# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-adaptive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-flow-core = { path = "../core" }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tdigest = { version = "0.2", features = ["use_serde"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync"] }

redis = { version = "1.1", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
redis-backend = ["redis"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "test-util", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }
