[package]
name = "nvagentrt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "test-util", "rt-multi-thread"] }
futures = "0.3"
