# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
nemo-flow-core = { path = "../core" }
nemo-flow-openinference = { path = "../openinference" }
nemo-flow-otel = { path = "../otel" }
nemo-flow-optimizer = { path = "../optimizer", features = ["redis-backend"] }
libc = "0.2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
cbindgen = "0.28"
