# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nvmagic-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nvmagic-core = { path = "../core" }
napi = { version = "2", features = ["napi6", "async", "serde-json", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"
