# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nemo-flow-core = { path = "../core" }
nemo-flow-openinference = { path = "../openinference" }
nemo-flow-otel = { path = "../otel" }
nemo-flow-optimizer = { path = "../optimizer", features = ["redis-backend"] }
napi = { version = "2", features = ["napi6", "async", "serde-json", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"
