# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-otel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nemo-flow-core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "grpc-tonic"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
tonic = { version = "0.14.1", default-features = false }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
async-trait = "0.1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3"
opentelemetry-http = { version = "0.31", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window", "console"] }

[dev-dependencies]
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "testing"] }
serde_json = "1"
