# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nvidia-nat-nexus-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
nvidia-nat-nexus-core = { path = "../core" }
pyo3 = { version = "0.28.2", features = ["abi3", "abi3-py311", "macros"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pythonize = "0.28.0"
serde_json = "1"
serde = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = "0.4"
