# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nat-nexus-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nvidia_nat_nexus_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
nvidia-nat-nexus-core = { path = "../core" }
nvidia-nat-nexus-openinference = { path = "../openinference" }
nvidia-nat-nexus-otel = { path = "../otel" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
send_wrapper = { version = "0.6", features = ["futures"] }
uuid = { version = "1", features = ["v4", "js"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
