# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nemo_flow_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
nemo-flow-core = { path = "../core" }
nemo-flow-openinference = { path = "../openinference" }
nemo-flow-otel = { path = "../otel" }
nemo-flow-optimizer = { path = "../optimizer" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
send_wrapper = { version = "0.6", features = ["futures"] }
uuid = { version = "1", features = ["v4", "js"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync"] }
wasm-bindgen-test = "0.3"
