# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "setuptools_dynamic_dependencies>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../.."

[project]
name = "langchain-nemo-flow"
dynamic = ["version", "dependencies"]
description = "NeMo Flow middleware and callback integrations for LangChain."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA Corporation & Affiliates" },
]
keywords = [
    "agents",
    "langchain",
    "middleware",
    "nemo-flow",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools_dynamic_dependencies]
dependencies = [
    # Minimum version to support they hooks we are using
    "langchain>=1.2.11,<2.0.0",
    # Allow the langchain to dictate the version of langchain-core, not strictly needed
    # but we do import from langchain_core
    "langchain-core",
    "nemo-flow == {version}",
]

[dependency-groups]
test = [
    "pytest>=8",
]

[project.urls]
Documentation = "https://nvidia.github.io/NeMo-Flow/"
Homepage = "https://github.com/NVIDIA/NeMo-Flow"
Issues = "https://github.com/NVIDIA/NeMo-Flow/issues"
Repository = "https://github.com/NVIDIA/NeMo-Flow"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
nemo-flow = { path = "../..", editable = true }
