# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "langchain-nemo-flow"
version = "0.2.0"
description = "NeMo Flow middleware and callback integrations for LangChain."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "NVIDIA Corporation & Affiliates" },
]
keywords = [
    "agents",
    "langchain",
    "middleware",
    "nemo-flow",
    "observability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Minimum version to support they hooks we are using
    "langchain>=1.2.9,<2.0.0",
    # Allow the langchain to dictate the version of langchain-core, not strictly needed
    # but we do import from langchain_core
    "langchain-core",
    "nemo-flow>=0.2.0,<0.3.0",
]


[project.urls]
Documentation = "https://nvidia.github.io/NeMo-Flow/"
Homepage = "https://github.com/NVIDIA/NeMo-Flow"
Issues = "https://github.com/NVIDIA/NeMo-Flow/issues"
Repository = "https://github.com/NVIDIA/NeMo-Flow"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_nemo_flow"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
